--- a/resources/my-war-main-deployment.yaml
+++ b/resources/my-war-main-deployment.yaml
@@ -11,7 +11,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      deployment: "my-war-main"
+      deployment: "my-war-mainXXX"
   strategy:
     type: "RollingUpdate"
   template:
